--- a/Lambda Practice.ipynb
+++ b/Lambda Practice.ipynb
@@ -38,7 +38,8 @@
     "firstNum = int(input(\"Enter first number:\"))\n",
     "secondNum = int(input(\"Enter second number: \"))\n",
     "product = multiply(firstNum, secondNum)\n",
-    "print(product)"
+    "print(product)\n",
+    "print(\"sheesh\")"
    ]
   }
  ],
