--- a/Lambda Practice.ipynb
+++ b/Lambda Practice.ipynb
@@ -16,7 +16,8 @@
    "source": [
     "addNum = lambda x : x + 5\n",
     "inputNum = addNum(2)\n",
-    "print (inputNum)"
+    "print (inputNum)\n",
+    "print(x)"
    ]
   },
   {
