--- a/Lambda Practice.ipynb
+++ b/Lambda Practice.ipynb
@@ -17,7 +17,8 @@
     "addNum = lambda x : x + 5\n",
     "inputNum = addNum(2)\n",
     "print (inputNum)\n",
-    "print(x)"
+    "print(x)\n",
+    "print(\"this is from test1\")"
    ]
   },
   {
